# navigation

amcl/: package.xml
base_local_planner/: package.xml
base_local_planner/include/base_local_planner/: costmap_model.h
base_local_planner/src/: costmap_model.cpp
carrot_planner/: package.xml
clear_costmap_recovery/: package.xml
clear_costmap_recovery/src/: clear_costmap_recovery.cpp
costmap_2d/: package.xml
costmap_2d/cfg/: ObstaclePlugin.cfg
costmap_2d/include/costmap_2d/: costmap_2d.h  costmap_2d_ros.h  costmap_layer.h  dynamic_algorithm_select.h  footprint_layer.h  inflation_layer.h  layer.h  layered_costmap.h  obstacle_layer.h  static_layer.h  voxel_layer.h
costmap_2d/plugins/: footprint_layer.cpp  inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp  voxel_layer.cpp
costmap_2d/src/: costmap_2d.cpp  costmap_2d_ros.cpp  layer.cpp  layered_costmap.cpp  observation_buffer.cpp
dwa_local_planner/: package.xml
fake_localization/: package.xml
global_planner/: package.xml
map_server/: package.xml
move_base/: CMakeLists.txt  package.xml
move_base/src/: diagnostic_publisher.cpp  move_base.cpp
move_base_msgs/: CMakeLists.txt  package.xml
move_base_msgs/action/: AugmentedMoveBase.action
move_base_msgs/srv/: ChangePlanner.srv
move_slow_and_clear/: package.xml
nav_core/: package.xml
navfn/: package.xml
navfn/include/navfn/: navfn_ros.h
navigation/: package.xml
robot_pose_ekf/: CMakeLists.txt  package.xml
robot_pose_ekf/src/: odom_estimation.cpp  odom_estimation_node.cpp
rotate_recovery/: package.xml
voxel_grid/: package.xml
(+16 files in other folders)
